# llm-distillation

./: .env.example  1_gitignore copy  CLOUD_GPU.md  Dockerfile  HF_HUB_GUIDE.md  LICENSE  Makefile  README.md  TRAINING.md  distillation_finetune_v2.ipynb  docker-compose.yml  final_check.py  finetune.ipynb  pyproject.toml  requirements-cloud.txt  requirements.txt
app/: streamlit_app.py
configs/: default.yaml  teacher_student.yaml
notebooks/: 01_setup_and_train.ipynb  02_optimize_round1.ipynb  03_optimize_round2.ipynb  04_check_progress.ipynb
scripts/: evaluate.py  infer.py  optimize_round1.py  optimize_round2.py  push_to_hub.py  train.py
src/: __init__.py  config.py
src/data/: __init__.py  collators.py  dataset_loader.py  preprocessing.py  tokenization.py
src/inference/: __init__.py  batch_predict.py  predict.py
src/models/: __init__.py  distillation.py  losses.py  student_loader.py  teacher_loader.py
src/monitoring/: __init__.py  logging_utils.py  plots.py
src/optimization/: __init__.py  optuna_search.py  search_space.py  study_utils.py
src/publishing/: __init__.py  hub_uploader.py
src/serving/: __init__.py  streamlit_helpers.py
src/training/: __init__.py  callbacks.py  evaluate.py  metrics.py
src/utils/: __init__.py  env.py  io.py  seed.py
tests/: __init__.py  test_losses.py
